--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -22,7 +22,7 @@
 
 .mega-menu__content--active { display: block; }
 
-.mega-menu__row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; }
+.mega-menu__row { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; }
 
 .mega-menu__col .mega-menu__category-item { margin-bottom: 30px; }
 
@@ -31,7 +31,7 @@
 .mega-menu__category { background: #5B6770; }
 
 @media screen and (max-width: 991px) { .mega-menu { position: fixed; top: 52px; bottom: 0; background: #5B6770; overflow: auto; -webkit-transform: translate(100%, 0); transform: translate(100%, 0); }
-  .mega-menu__row { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+  .mega-menu__row { -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
   .mega-menu__row .mega-menu__col { display: none; }
   .mega-menu__row .mega-menu__col.mega-menu__col--flex { display: block; margin-bottom: 30px; }
   .mega-menu__content--active { margin-bottom: 100px; } }
@@ -40,13 +40,13 @@
   .mega-menu__col { margin: 0 15px; }
   .mega-menu__col:first-child { margin-left: 0; }
   .mega-menu__col--flex { border-right: 1px solid #CCD2D7; }
-  .mega-menu__col--4 { -ms-flex-preferred-size: 25%; flex-basis: 25%; }
-  .mega-menu__col--6 { -ms-flex-preferred-size: 50%; flex-basis: 50%; }
+  .mega-menu__col--4 { -webkit-flex-basis: 25%; -ms-flex-preferred-size: 25%; flex-basis: 25%; }
+  .mega-menu__col--6 { -webkit-flex-basis: 50%; -ms-flex-preferred-size: 50%; flex-basis: 50%; }
   .mega-menu__category { padding: 30px 0; } }
 
 .mega-menu-title { font-size: 20px; background: #333F48; }
 
-.mega-menu-title .container { display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
+.mega-menu-title .container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; position: relative; }
 
 .mega-menu-title a { text-decoration: none; cursor: pointer; }
 
@@ -54,7 +54,7 @@
 
 .mega-menu-title a:hover, .mega-menu-title a:focus, .mega-menu-title a:active { color: #FFF; }
 
-.mega-menu-title__level1-link { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.mega-menu-title__level1-link { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
 .mega-menu-title__close-menu { display: none; }
 
