--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -32,9 +32,9 @@
   .product-card-sku__name .icon { height: 1rem; width: 1rem; line-height: 1rem; position: absolute; right: 30px; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
   .product-card-sku__price { padding-bottom: 20px; padding-left: 99px; }
   .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.3rem; font-weight: normal; line-height: 1.7rem; background-color: #F8F8F8; padding: 12px 30px; }
-  .product-card-sku__link-item-link { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; }
+  .product-card-sku__link-item-link { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
   .product-card-sku__link-item-link:hover { color: #005EB8; text-decoration: none; }
-  .product-card-sku__link-item-link .link-label { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+  .product-card-sku__link-item-link .link-label { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
   .product-card-sku__content { padding: 30px 30px; }
   .product-card-sku__attrs-list { padding-bottom: 16px; }
   .product-card-sku__attrs-list-item { margin-bottom: 10px; }
@@ -48,17 +48,17 @@
   .product-card-sku__name { font-family: Arial, sans-serif; font-size: 2.6rem; font-weight: bold; line-height: 4rem; }
   .product-card-sku__name .icon { font-size: 26px; position: relative; top: 4px; }
   .product-card-sku__price { position: absolute; top: 50%; right: 20px; -webkit-transform: translateY(-50%); transform: translateY(-50%); }
-  .product-card-sku__links-list { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row nowrap; flex-flow: row nowrap; }
+  .product-card-sku__links-list { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row nowrap; -ms-flex-flow: row nowrap; flex-flow: row nowrap; }
   .product-card-sku__link-item { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; border-right: 1px solid #FFF; margin-right: 20px; padding-right: 16px; }
   .product-card-sku__link-item:last-child { border-right: 0; }
   .product-card-sku__link-item-link .link-label { color: #FFF; }
   .product-card-sku__link-item-link:hover { color: #FFF; text-decoration: underline; }
   .product-card-sku__content { margin-top: 30px; margin-bottom: 60px; padding-left: 188px; }
-  .product-card-sku__attrs-list { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row wrap; flex-flow: row wrap; margin-bottom: 30px; }
-  .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+  .product-card-sku__attrs-list { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-flow: row wrap; -ms-flex-flow: row wrap; flex-flow: row wrap; margin-bottom: 30px; }
+  .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
   .product-card-sku__description { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }
 
-.product-grid-results--family .results-list__content { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.product-grid-results--family .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
 @media screen and (max-width: 991px) { .product-grid-results--family .container { width: 100%; }
   .product-grid-results--family .results-list { margin-left: -30px; margin-right: -30px; }
