--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/resource-list/css/resource-list.css
@@ -31,8 +31,8 @@
 
 @media screen and (min-width: 768px) { .secondary-content-accordion__column:first-child { padding-right: 35%; } }
 
-.secondary-content-accordion__body { padding: 25px 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+.secondary-content-accordion__body { padding: 25px 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; }
 
-@media screen and (min-width: 768px) { .secondary-content-accordion__body { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; } }
+@media screen and (min-width: 768px) { .secondary-content-accordion__body { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; } }
 
 .secondary-content-accordion__icons { position: absolute; right: 0; color: #005EB8; font-size: 2.25rem; bottom: 10px; }
