--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-anchor-links/css/module-anchor-links.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-anchor-links/css/module-anchor-links.css
@@ -17,7 +17,7 @@
 
 .module-anchor-links__list-item:first-child { border-top: 1px solid #CCD2D7; }
 
-.module-anchor-links__list-link { -webkit-box-align: center; -ms-flex-align: center; align-items: center; background-color: #FFF; color: #005EB8; display: -webkit-box; display: -ms-flexbox; display: flex; min-height: 75px; padding: 0 20px; position: relative; text-align: left; width: 100%; }
+.module-anchor-links__list-link { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; background-color: #FFF; color: #005EB8; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; min-height: 75px; padding: 0 20px; position: relative; text-align: left; width: 100%; }
 
 .module-anchor-links__list-link:hover { background-color: #EEF0F2; font-weight: bold; outline: 0; }
 
