--- a/eaton.frontend/src/components/breadcrumb/css/breadcrumb.scss
+++ b/eaton.frontend/src/components/breadcrumb/css/breadcrumb.scss
@@ -32,12 +32,12 @@
 
   &__list-item {
     align-items: center;
-    font-size: 14px;
+    font-size: 1.4rem;
     margin-right: 5px;
     float: left;
 
     .icon {
-      font-size: 10px;
+      font-size: 1.0rem;
       padding: 0 4px;
     }
 
