--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
@@ -8,9 +8,9 @@
 
 .eaton-breadcrumb__list::after { clear: both; }
 
-.eaton-breadcrumb__list-item { -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 14px; margin-right: 5px; float: left; }
+.eaton-breadcrumb__list-item { -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 1.4rem; margin-right: 5px; float: left; }
 
-.eaton-breadcrumb__list-item .icon { font-size: 10px; padding: 0 4px; }
+.eaton-breadcrumb__list-item .icon { font-size: 1.0rem; padding: 0 4px; }
 
 .eaton-breadcrumb__list-item:last-child a { color: #000; }
 
