--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-3-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-3-column.html
@@ -20,6 +20,60 @@
             </a>
         </div>
         </div>
+
+
+
+<hr><hr>
+
+
+
+
+
+
+
+
+
+
+
+        <ul class="text-only-3-column__slides" data-sly-list.card="${data.cards}">
+            <li class="slides text-only-3-column__card">
+        
+
+       <a href="${data.single_feature_card.cta.url}" target="${data.single_feature_card.cta.target}" class="article-list-single-feature__link">
+                <span class="article-list-single-feature--border"></span>
+                <div class="article-list-single-feature__article--copy">
+                    <p class="b-eyebrow-small">${card.title}</p>
+                    <p class="b-h5-link">${card.text}</p>
+                    <p class="category-item-date"><em>${card.date_text}</em></p>
+                </div>
+            </a>
+
+
+
+
+
+
+            </li>
+        </ul>
+        
+            <button class="text-only-3-column__prev-arrow upsell-products__arrows button--reset">
+                <i class="icon icon-chevron-left"></i>
+                <span class="sr-only">Go to Previous Item</span>
+            </button>
+            <button class="text-only-3-column__next-arrow upsell-products__arrows button--reset">
+                <i class="icon icon-chevron-right"></i>
+                <span class="sr-only">Go to Next Item</span>
+            </button>
+       
+    
+
+
+
+
+
+
+
+
     </div>
 
 
