font sizes refactors

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -2,7 +2,7 @@
 
   <div class="faceted-navigation-header">
     <div class="faceted-navigation-header__header-top">
-      <div class="faceted-navigation-header__title">
+      <div class="faceted-navigation-header__title b-heading-h5">
         ${ '{0} {1}' @ i18n, format=[ data.resultsCount, data.resultsLabel ] }
       </div>
       <div class="faceted-navigation-header__sort-options">
