--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -3,7 +3,6 @@
 //-----------------------------------
 
 .faceted-navigation-header {
-  font-size: 14px;
   margin-bottom: 28px;
 
   &__active-filters {
@@ -13,7 +12,7 @@
   &__filters-actions {
     margin-left: auto;
     min-width: 85px;
-    font-size: 14px;
+    font-size: 1.4rem; // SMALL BODY COPY DEVIATION
     height: 3.5rem;
   }
 
@@ -46,8 +45,8 @@
 
       .icon {
         display: inline-block;
-        font-size: 14px;
-        padding-left: 10px;
+        font-size: 1.4rem;
+        padding-left: 1rem;
         vertical-align: middle;
         color: $color__primary-blue;
       }
@@ -62,7 +61,7 @@
 
       li {
         padding: 5px 20px;
-        font-size: 18px;
+        font-size: 1.8rem;
 
         a {
           color: $color__primary-blue;
@@ -85,15 +84,12 @@
   // Results: Header Title
   //--------------
   &__header-top {
-    // display: flex;
     border-bottom: .2rem solid $color__secondary-gray6;
     padding-bottom: 3rem;
     padding-top: 5rem;
   }
 
   &__title {
-    font-size: 2.4rem;
-    font-weight: bold;
     display: inline-block;
   }
 
@@ -102,11 +98,11 @@
   //--------------
   &__filter-link {
     display: inline-block;
-    font-size: 14px;
+    font-size: 1.3rem; // SMALL BODY COPY DEVIATION
     margin-right: 12px;
 
     .icon {
-      font-size: 10px;
+      font-size: 1rem;
       margin-right: 2px;
       margin-top: 5px;
     }
@@ -135,7 +131,7 @@
 
     &__filter-link,
     &__filters-actions {
-      font-size: 12px;
+      font-size: 1.2rem;
     }
   }
 
