--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-sidebar.scss
@@ -71,12 +71,11 @@
     position: fixed;
     top: 0;
     height: 53px;
-    font-size: 18px;
     left: 0;
     color: $color__white;
     background-color: $color__primary-gray1;
     width: 100%;
-    padding: 15px 30px 0 30px;
+    padding: 13px 30px 0 30px;
     z-index: 510;
 
     .close-facets-mobile {
@@ -90,9 +89,9 @@
     }
 
     .icon {
-      font-size: 16px;
+      font-size: 1.6rem;
       position: relative;
-      top: 4px;
+      top: 1px;
     }
 
   }
@@ -113,17 +112,13 @@
       position: absolute;
       right: 0;
       color: $color__primary-blue;
-      font-size: 12px;
+      font-size: 1.2rem;
       margin-top: 6px;
     }
   }
 
   &__view-more-groups {
     color: $color__primary-blue;
-  }
-
-  &__facet-name {
-    font-size: 18px;
   }
 
   &__view-more-values {
