--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/breadcrumb/css/breadcrumb.css
@@ -21,7 +21,7 @@
 
 .eaton-breadcrumb__list::after { clear: both; }
 
-.eaton-breadcrumb__list-item { -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-size: 1.4rem; margin-right: 5px; float: left; }
+.eaton-breadcrumb__list-item { -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 1.4rem; margin-right: 5px; float: left; }
 
 .eaton-breadcrumb__list-item .icon { font-size: 1.0rem; padding: 0 4px; }
 
