--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -139,6 +139,7 @@ $border-color: rgba($color__secondary-gray4, 0.5);
       padding: 0;
     }
 
+    // stylelint-disable declaration-no-important
     &__panel-list &__item { // To overwrite bootstrap default
       margin-top: 3px !important;
     }
