--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -66,7 +66,7 @@
 
 
   .category__item-innerpadding {
-    padding: 30px 30px 15px 30px
+    padding: 30px 30px 15px 30px;
   }
 
   .category__title--bottompadding {
@@ -102,7 +102,7 @@
 
   @include media-mobile-only {
     .category__item-innerpadding {
-      padding: 30px 50px 15px 50px
+      padding: 30px 50px 15px 50px;
     }
 
     .carousel__item {
