--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -5,7 +5,7 @@
     - These strings are used by Javascript Templates
   */-->
   <div class="module-media-gallery"
-    data-i18n='{ "closeOverlay": "${ "Close Image" @ i18n }" }'>
+    data-i18n='{ "closeOverlay": "${ "Close" @ i18n }" }'>
     <div class="container">
       <div class="row">
 
