--- a/eaton.frontend/src/shared/module-media-gallery/css/_media-gallery-zoom.scss
+++ b/eaton.frontend/src/shared/module-media-gallery/css/_media-gallery-zoom.scss
@@ -48,6 +48,7 @@ body.zoom-overlay-open {
   left: 0;
   position: fixed;
   top: 0;
+  z-index: 99;
 
   &__close {
     color: $color__primary-blue;
