[Eaton-30] Country Selector Drawer: Fix height Clipping for countries with tallest content.

--- a/eaton.frontend/src/components/header/css/_header-interactions.scss
+++ b/eaton.frontend/src/components/header/css/_header-interactions.scss
@@ -116,7 +116,7 @@
   .drawer-open {
     .full-page-drawer {
       visibility: visible;
-      max-height: 1000px;
+      max-height: 1200px; // Max height for the Desktop Breakpoint
     }
   }
 
