--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -177,3 +177,5 @@
   .text-only-3-column__description { padding-bottom: 15px; }
   .text-only-3-column__article { padding-top: 30px; }
   .text-only-3-column__cta-container { margin-top: 30px; } }
+
+.text-only-3-column__slides { padding-left: 15px; }
