--- a/eaton.frontend/src/components/cookie-acceptance/css/cookie-acceptance.scss
+++ b/eaton.frontend/src/components/cookie-acceptance/css/cookie-acceptance.scss
@@ -15,7 +15,8 @@
   left: 0;
   width: 100%;
   padding: 30px 0 20px;
-  z-index: 99999;
+  z-index: 220;
+  position: relative;
   display: none;
 
   &__agreement {
