--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/cookie-acceptance/css/cookie-acceptance.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/cookie-acceptance/css/cookie-acceptance.css
@@ -11,7 +11,7 @@
  */
 
 
-.cookie-acceptancebox { background-color: #333F48; color: #FFF; top: 0; left: 0; width: 100%; padding: 30px 0 20px; z-index: 99999; display: none; }
+.cookie-acceptancebox { background-color: #333F48; color: #FFF; top: 0; left: 0; width: 100%; padding: 30px 0 20px; z-index: 220; position: relative; display: none; }
 
 .cookie-acceptancebox__agreement { color: #FFF; }
 
