font sizes udpates

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -27,7 +27,9 @@
   .eaton-featured-topic__text { margin-bottom: 30px; }
   .eaton-featured-topic__button-container { margin-top: 0; }
   .eaton-featured-topic__button-container .b-button.b-button__primary { width: 100%; }
-  .eaton-featured-topic .eaton-link-list-vertical__eyebrow { margin-bottom: 10px; font-size: 18px; } }
+  .eaton-featured-topic .eaton-link-list-vertical__eyebrow { margin-bottom: 10px; font-family: Arial, sans-serif; font-size: 2.2rem; font-weight: bold; line-height: 2.9rem; } }
+
+@media screen and (max-width: 767px) and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 3rem; font-weight: bold; line-height: 4.2rem; } }
 
 @media screen and (min-width: 992px) { .eaton-featured-topic__list-left::after { background: #F8F8F8; content: ''; height: 85%; position: absolute; right: 0; top: 5px; width: 2px; }
   .eaton-featured-topic__list-right { padding-left: 9%; } }
