--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/product-card-family.html
@@ -6,7 +6,7 @@
   <!--/* Results Wrapper */-->
   <!--/*
     NOTE: data-i18n is a JSON object that contains a list i18n strings used in this View
-    - These strings are used by a JavaScript template when the user clicks "Load More"
+    - These strings are used by JavaScript templates (when the user clicks "Load More")
   */-->
   <div class="results-list"
     data-results-url="${ data.ajaxRequestUrl }"
