--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/results-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/results-list.html
@@ -3,7 +3,7 @@
 
 <!--/*
   NOTE: data-i18n is a JSON object that contains a list i18n strings used in this View
-  - These strings are used by a JavaScript template when the user clicks "Load More"
+  - These strings are used by JavaScript templates (when the user clicks "Load More")
 */-->
 <div class="results-list"
   data-results-url="${ data.ajaxRequestUrl }"
@@ -41,7 +41,10 @@
 
   <div class="results-list__bottom text-center">
     <div class="results-list__actions text-center">
+
+      <!--/* Render Button "Load More" results only if the property 'ajaxRequestUrl' is not empty */-->
       <button
+        data-sly-test="${ data.ajaxRequestUrl }"
         class="b-button b-button__primary b-button__primary--light"
         role="button"
         data-load-more>${ 'Load More' @ i18n }</button>
