EATON-252 Image-Component: Initial File Structure

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -160,7 +160,7 @@
 
 .text-only-3-column .b-eyebrow-small { padding: 0; }
 
-.text-only-3-column .category-item-date { padding-top: 0; }
+.text-only-3-column .category-item-date { padding-top: 0; color: #98A4AE; }
 
 .text-only-3-column__article { padding-top: 0; }
 
