--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
@@ -1,19 +1,16 @@
 <template data-sly-template.module="${ @ data}">
-    <div class="feature-block-component ${data.backgroundColor == '#005EB8' ? 'feature-block-component--theme-blue' : 'feature-block-component--theme-white'}">
-        <div class="row feature-block-component__container feature-block-component__container--height">
-            <div style="background-color: ${data.backgroundColor @ context='styleString'}"
-                 class="col-xs-12 col-sm-7 feature-block-component__copy feature-block-component__copy--${data.imgAlignment} ${data.backgroundColor == '#005EB8' ? 'feature-block-component__copy--white-text' : ''}">
-                <div class="feature-block-component__text">
-                    <h2>${data.title}</h2>
-                    <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
-                    <a data-sly-test="${data.cta.url.length > 0}" class="b-button b-button__primary ${data.backgroundColor == '#005EB8' ? 'b-button__primary--dark' : 'b-button__primary--light'} feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
-                </div>
+    <div style="background-color: ${data.backgroundColor @ context='styleString'}">
+        <div class="feature-block-component ${data.imgAlignment == 'right' ? 'feature-block-component__right' : 'feature-block-component__left'}">
+            <div class="feature-block-component__image">
+                <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+                    <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+                </sly>
             </div>
-            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="eaton/static-components/shared/templates/rendition-background.html">
-                <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+            <div class="feature-block-component__text-container ${data.backgroundColor == '#005EB8' ? 'feature-block-component__text-container--white' : ''}">
+                <h2>${data.title}</h2>
+                <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
+                <a data-sly-test="${data.cta.url.length > 0}" class="b-button b-button__primary ${data.backgroundColor == '#005EB8' ? 'b-button__primary--dark' : 'b-button__primary--light'} feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
             </div>
-
-
         </div>
     </div>
 </template>
