--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-features/views/view-product-features.html
@@ -1,15 +1,9 @@
-<div class="feature-block-component" data-sly-use.data="${'../data/view-product-features-data.js' @testdata=properties.testdata}">
-    <div class="container">
-        <div class="row feature-block-component__container ${data.imgSrc ? 'feature-block-component__container--white' : ''}">
-            <div class="col-xs-12 ${data.image.desktop ? 'col-sm-7' : 'col-sm-12'} feature-block-component__copy" style="background-color: ${data.backgroundColor @ context='styleString'}">
-                <div class="feature-block-component__text">
-                    <h2>${data.title}</h2>
-                    <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-5 feature-block-component__image" data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
-                <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
-            </div>
-        </div>
+<div class="feature-block-component feature-block-component__right" data-sly-use.data="${'../data/view-product-features-data.js' @testdata=properties.testdata}">
+    <div class="feature-block-component__image" data-sly-test="${data.image.desktop}" data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+        <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+    </div>
+    <div class="feature-block-component__text-container">
+        <h2>${data.title}</h2>
+        <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
     </div>
 </div>
