EATON 544 - font size fix

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -134,7 +134,7 @@
 
 .text-only-2-column .b-eyebrow-small { padding: 0; }
 
-.text-only-2-column .category-item-date { padding-top: 0; }
+.text-only-2-column .category-item-date { padding-top: 0; color: #98A4AE; font-size: 2rem; }
 
 .text-only-2-column__article { padding-top: 0; }
 
