--- a/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-vertical.scss
@@ -2,9 +2,20 @@
 // LinkList Component: Vertical View
 //-----------------------------------
 .eaton-link-list-vertical {
-
+  font-size: 2.4rem;
   &__eyebrow {
     text-transform: uppercase;
+  }
+
+  &__eyebrow.heading {
+    font-size: 2.4rem;
+  }
+
+  @include media-desktop-and-up {
+    font-size: 1.8rem;
+    &__eyebrow.heading {
+      font-size: 1.8rem;
+    }
   }
 
   &__list {
