--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/text/css/text.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/text/css/text.css
@@ -11,6 +11,8 @@
  */
 
 
+.eaton-text-default h3 { font-size: 18px; }
+
 .eaton-text-statement__content { padding: 15px 0 15px 30px; border-left: 10px solid #005EB8; font-family: Arial; font-style: italic; color: #98A4AE; margin: 0; }
 
 @media screen and (max-width: 991px) { .eaton-text-statement__content { font-size: 1.063em; line-height: 2em; } }
