EATON 544 - font size fix

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-text-only-2-column.html
@@ -15,7 +15,7 @@
                 <span class="article-list-single-feature--border"></span>
                 <div class="article-list-single-feature__article--copy">
                     <p class="b-eyebrow-small">${card.title}</p>
-                    <p class="b-h4-link">${card.text}</p>
+                    <p class="b-heading-h4">${card.text}</p>
                     <p class="category-item-date"><em>${card.date_text}</em></p>
                 </div>
             </a>
