--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -117,8 +117,27 @@
   @include media-desktop-large {
     width: calc((100% - 1140px) / 2 + 1140px);
 
-    &__left {
+    &__text-container {
+      width: calc(1140px - 484px);
+    }
+
+    &__right {
       margin-left: calc((100% - 1140px) / 2);
+
+      .eaton-ttil-quote__text-container {
+        float: left;
+        padding-left: 70px;
+        padding-right: 0;
+      }
+    }
+
+    &__left {
+      justify-content: flex-end;
+
+      .eaton-ttil-quote__text-container {
+        padding-left: 0;
+        padding-right: 70px;
+      }
     }
   }
 }
