--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -210,4 +210,8 @@
   .eaton-ttil-quote__right .eaton-ttil-quote__text-container { text-align: left; } }
 
 @media screen and (min-width: 1200px) { .eaton-ttil-quote { width: calc((100% - 1140px) / 2 + 1140px); }
-  .eaton-ttil-quote__left { margin-left: calc((100% - 1140px) / 2); } }
+  .eaton-ttil-quote__text-container { width: calc(1140px - 484px); }
+  .eaton-ttil-quote__right { margin-left: calc((100% - 1140px) / 2); }
+  .eaton-ttil-quote__right .eaton-ttil-quote__text-container { float: left; padding-left: 70px; padding-right: 0; }
+  .eaton-ttil-quote__left { -webkit-box-pack: end; -webkit-justify-content: flex-end; -ms-flex-pack: end; justify-content: flex-end; }
+  .eaton-ttil-quote__left .eaton-ttil-quote__text-container { padding-left: 0; padding-right: 70px; } }
